--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,7 +2,7 @@
 <resources>
     <attr name="colorSecondary" />
     <attr name="colorOnSecondary" />
-<!--    <attr name="colorPrimary" />-->
     <attr name="colorOnSurface" />
-    <attr name="colorOnArticleBar" />
+    <attr name="colorOnBackground" />
+    <attr name="colorSurface" />
 </resources>
